# botsendform

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUTURE_IDEAS.md  LICENSE  Makefile  README.md  SECURITY.md  TUTORIAL.md  config.py  create_sample_data.py  demo.py  docker-compose.yml  docker-entrypoint.sh  env.example  form_bot.py  form_templates.py  main.py  pyproject.toml  quick_start.py  requirements.txt  version.py
.github/: PULL_REQUEST_TEMPLATE.md  config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
test/: test_form.html  test_server.py
utils/: __init__.py  excel_reader.py  form_handler.py  logger.py
